# bd2-sorter

./: .gitignore  README.md  bd2_sorter.py  pyproject.toml
bd2_sorter/: __init__.py  __main__.py  cli.py
